# log

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  index.html
.github/workflows/: ci.yml
config/: Jamfile.jam  build.jam
config/atomic-int32/: Jamfile.jam
config/message-compiler/: Jamfile.jam
config/native-syslog/: Jamfile.jam
config/pthread-mutex-robust/: Jamfile.jam
config/regex-header-only/: Jamfile.jam
config/visibility/: Jamfile.jam  (+1 more)
doc/: .gitignore  Jamfile.v2  attributes.qbk  changelog.qbk  core.qbk  expressions.qbk  extension.qbk  filters_reference.qbk  formatters_reference.qbk  gen_references.xsl  install.qbk  log.qbk  rationale.qbk  sink_backends.qbk  sink_frontends.qbk  sources.qbk  tutorial.qbk  utilities.qbk
src/: asio_config.hpp  atomic_queue.hpp  attribute_name.cpp  attribute_set_impl.hpp  attribute_value_set.cpp  bit_tools.hpp  code_conversion.cpp  core.cpp  date_time_format_parser.cpp  default_attribute_names.cpp  default_filter_factory.cpp  default_filter_factory.hpp  default_formatter_factory.cpp  default_formatter_factory.hpp  default_sink.cpp  default_sink.hpp  dump.cpp  dump_avx2.cpp  dump_ssse3.cpp  event.cpp  event_log_backend.cpp  event_log_registry.hpp  exceptions.cpp  filter_parser.cpp  format_parser.cpp  formatter_parser.cpp  id_formatting.hpp  init_from_settings.cpp  interprocess_message_queue_posix.cpp  interprocess_message_queue_win.cpp  ipc_message_queue_posix.hpp  ipc_message_queue_win.hpp  ipc_reliable_message_queue_posix.cpp  ipc_reliable_message_queue_win.cpp  light_rw_mutex.cpp  matches_relation_factory.cpp  named_scope.cpp  named_scope_format_parser.cpp  once_block.cpp  parser_utils.cpp  (+24 more)
test/: Jamfile.v2
(+253 files in other folders)
